--- a/ach_2077/web/header.xhtml
+++ b/ach_2077/web/header.xhtml
@@ -17,13 +17,13 @@
         
         <h:form styleClass="navbar-form navbar-right">
             <div class="form-group">
-                <b:inputText placeholder="Email" fieldSize="sm"/>
+                <b:inputText placeholder="Email" value="#{login.user}" fieldSize="sm"/>
             </div>
             <div class="form-group">
-                <b:inputText placeholder="Password" fieldSize="sm"/>
+                <b:inputText placeholder="Password" type="password" value="#{login.pwd}" fieldSize="sm"/>
             </div> 
             #{' '}
-            <b:commandButton action="a" value="Entrar" look="success" icon="chevron-right" iconAlign="right"/>
+            <b:commandButton action="#{login.validateUsernamePassword}" value="Entrar" look="success" icon="chevron-right" iconAlign="right"/>
         </h:form>
     </b:navBar>
     
